--- a/memory-game/src/App2.css
+++ b/memory-game/src/App2.css
@@ -54,4 +54,10 @@ body {
 .card button {
   border-radius: 10px;
   padding: 0;
+  background-color: black
+}
+
+.card img {
+  padding: 0;
+  margin: 0;
 }
