--- a/memory-game/src/App2.css
+++ b/memory-game/src/App2.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: grey;
+  background-color: #7A7A7A;
 }
 
 .App {
@@ -17,7 +17,7 @@ body {
 }
 
 .score {
-  background-color: #FF7E2B;
+  background-color: #46EB7D;
   color: white;
   padding-top: 2em;
   border-radius: 30px;
@@ -35,15 +35,18 @@ body {
 
 #logo {
   width: 20vw;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .score button {
   padding: 30px;
   border-radius: 10px;
+  border: solid #7A7A7A;
 }
 
 .score h1 {
-  border: solid white;
+  border: solid #7A7A7A;
   padding-top: 1em;
   padding-bottom: 1em;
   margin-left: 1em;
