--- a/memory-game/src/App2.css
+++ b/memory-game/src/App2.css
@@ -65,3 +65,33 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
+.celebrate {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+  background-color: #7A7A7A;
+}
+
+.celebrate h1 {
+  color: white;
+  padding: 0;
+  border: none;
+  margin: 0;
+}
+
+.celebrate h2 {
+  color: white;
+  padding: 0;
+  margin: 0;
+}
+
+.celebrate button {
+  background-color: transparent;
+  border: none;
+  color: white;
+}
